[gd_scene load_steps=3 format=3 uid="uid://dcmlmg4iib2r7"]

[ext_resource type="Theme" uid="uid://dbafvnkyfajsk" path="res://Assets/UI/DefaultTheme.tres" id="1_2ot5g"]
[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_rjami"]

[node name="PauseMenu" type="Control"]
process_mode = 3
texture_filter = 6
custom_minimum_size = Vector2(1600, 900)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2ot5g")
script = ExtResource("1_rjami")
metadata/_edit_use_anchors_ = true

[node name="PausePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(800, 450)

[node name="VerticalList" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_top = 350.0
offset_right = -600.0
offset_bottom = -350.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 100)
alignment = 1

[node name="Pause" type="Label" parent="PausePanel/VerticalList"]
layout_mode = 2
text = "- PAUSE -"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PausePanel/VerticalList"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="PausePanel/VerticalList"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="PausePanel/VerticalList"]
layout_mode = 2
text = "Quit"

[node name="Settings" type="VBoxContainer" parent="PausePanel"]
visible = false
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_top = 350.0
offset_right = -600.0
offset_bottom = -350.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="WindowMode" type="OptionButton" parent="PausePanel/Settings"]
layout_mode = 2
item_count = 3
selected = 2
allow_reselect = true
popup/item_0/text = "Fullscreen exclusive"
popup/item_0/id = 0
popup/item_1/text = "Borderless"
popup/item_1/id = 1
popup/item_2/text = "Windowed"
popup/item_2/id = 2

[node name="VSyncToggle" type="CheckBox" parent="PausePanel/Settings"]
layout_mode = 2
button_pressed = true
text = "Enable V-SYNC"

[node name="BackButton" type="Button" parent="PausePanel/Settings"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="PausePanel/VerticalList/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausePanel/VerticalList/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PausePanel/VerticalList/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="item_selected" from="PausePanel/Settings/WindowMode" to="." method="_on_window_mode_item_selected"]
[connection signal="toggled" from="PausePanel/Settings/VSyncToggle" to="." method="_on_v_sync_toggle_toggled"]
[connection signal="pressed" from="PausePanel/Settings/BackButton" to="." method="_on_back_button_pressed"]
